Frameworks (No core functions as of yet)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ThesisOCR</string>
     <string name="use_camera">Use Camera</string>
+    <string name="select_image">Select Image</string>
 </resources>
