--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">ThesisOCR</string>
     <string name="use_camera">Use Camera</string>
     <string name="select_image">Select Image</string>
+    <string name="take_photo">Take Photo</string>
+    <string name="exit_camera">Exit Camera</string>
 </resources>
