--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="select_image">Select Image</string>
     <string name="take_photo">Take Photo</string>
     <string name="exit_camera">Exit Camera</string>
+    <string name="debug_save">Debug Save</string>
 </resources>
