--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="debug_save">Debug Save</string>
     <string name="camera_message_1">Ensure ID covers much \nof the preview.</string>
     <string name="camera_message_2">Photo taken, let go and \nwait for processing</string>
-
+    <string name="debug_parallel">Parallel</string>
+    <string name="debug_serial">Sequential</string>
 </resources>
